tests/specs/ecosystem/teapot/insomnia_plugin_aws/0_1_0.test
teapot/insomnia-plugin-aws/0.1.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2580 [ERROR]: Cannot find name 'Buffer'.
        getBodyBuffer: (response: Response, fallback?: any) => Promise<Buffer | null>;
                                                                       ~~~~~~
    at file://<tmpdir>/src/types/template.ts:60:72

error: Type checking failed.

